syntax = "proto3";

package api;

option go_package = "./gophkeeper";

service Gophkeeper {
  rpc Ping(PingRequest) returns (PingResponse) {}
  rpc HandleCreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc HandleGetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc HandleCreateData(CreateDataRequest) returns (CreateDataResponse) {}
  rpc HandleGetData(GetDataRequest) returns (GetDataResponse) {}
  rpc HandleCreateToken(CreateTokenRequest) returns (CreateTokenResponse) {}
  rpc HandleGetToken(GetTokenRequest) returns (GetTokenResponse) {}
  rpc HandleCreateMetadata(CreateMetadataRequest) returns (CreateMetadataResponse) {}
  rpc HandleGetMetadata(GetMetadataRequest) returns (GetMetadataResponse) {}
}

message PingRequest {}
message PingResponse {
  string resp = 1;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}
message CreateUserResponse {
  string resp = 1;
}
message GetUserRequest {
  string username = 1;
  string password = 2;
}
message GetUserResponse {
  string resp = 1;
}

message CreateDataRequest {
  string userId = 1;
  string data = 2;
  string type = 3;
}
message CreateDataResponse {
  string resp = 1;
}
message GetDataRequest {
  string dataId = 1;
}
message GetDataResponse {
  string resp = 1;
}

message CreateTokenRequest {
  string userId = 1;
}
message CreateTokenResponse {
  string token = 1;
}
message GetTokenRequest {
  string id = 1;
}
message GetTokenResponse {
  string token = 1;
}

message CreateMetadataRequest {
  string dataId = 1;
  string data = 2;
}
message CreateMetadataResponse {
  string resp = 1;
}
message GetMetadataRequest {
  string id = 1;
}
message GetMetadataResponse {
  string resp = 1;
}